--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.23.6",
     "jest": "^30.0.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
