--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
